salt/myfw/iptables-fw
# Generated by iptables-save v1.4.21 on Sat Sep 10 20:31:44 2016
*nat
:PREROUTING ACCEPT [13:1181]
:INPUT ACCEPT [4:654]
:OUTPUT ACCEPT [8:554]
:POSTROUTING ACCEPT [1:120]
-A POSTROUTING -o enp0s3 -j MASQUERADE
COMMIT
# Completed on Sat Sep 10 20:31:44 2016
# Generated by iptables-save v1.4.21 on Sat Sep 10 20:31:44 2016
*filter
:INPUT ACCEPT [52:7272]
:FORWARD ACCEPT [166:38342]
:OUTPUT ACCEPT [36:8316]
-A INPUT -i lo -j ACCEPT
-A INPUT -i enp0s8 -j ACCEPT
-A INPUT -i enp0s3 -p tcp -m tcp --dport 23 -m state --state INVALID,NEW,UNTRACKED -j LOG --log-prefix "FIREWALL: telnet"
-A INPUT -i enp0s3 -p tcp -m tcp --dport 110 -m state --state INVALID,NEW,UNTRACKED -j LOG --log-prefix "FIREWALL: pop3 "
-A INPUT -i enp0s3 -p tcp -m tcp --dport 113 -m state --state INVALID,NEW,UNTRACKED -j LOG --log-prefix "FIREWALL: identd "
-A INPUT -i enp0s3 -p udp -m udp --dport 111 -m state --state INVALID,NEW,UNTRACKED -j LOG --log-prefix "FIREWALL: udp rpc"
-A INPUT -i enp0s3 -p tcp -m tcp --dport 111 -m state --state INVALID,NEW,UNTRACKED -j LOG --log-prefix "FIREWALL:  rpc"
-A INPUT -i enp0s3 -p tcp -m tcp --dport 137:139 -m state --state INVALID,NEW,UNTRACKED -j LOG --log-prefix "FIREWALL: netbios "
-A INPUT -i enp0s3 -p udp -m udp --dport 137:139 -m state --state INVALID,NEW,UNTRACKED -j LOG --log-prefix "FIREWALL: udp netbios "
-A INPUT -i enp0s3 -p tcp -m tcp --dport 27500 -m state --state INVALID,NEW,UNTRACKED -j LOG --log-prefix "FIREWALL: ssh 27500"
-A INPUT -i enp0s3 -p tcp -m tcp --dport 22 -m state --state INVALID,NEW,UNTRACKED -j LOG --log-prefix "FIREWALL: ssh 22 std"
-A INPUT -i enp0s3 -p tcp -m tcp --dport 10000 -m state --state INVALID,NEW,UNTRACKED -j LOG --log-prefix "FIREWALL: webmin 10000"
-A INPUT -s 10.0.2.0/24 -i enp0s3 -p tcp -m tcp --dport 27500 -j DROP
-A INPUT -s 10.0.2.0/24 -i enp0s3 -p tcp -m tcp --dport 22 -j DROP
-A INPUT -s 192.168.2.0/24 -i enp0s8 -p tcp -m tcp --dport 27500 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.2.0/24 -i enp0s8 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.0.2.0/24 -i enp0s3 -p tcp -m tcp --dport 10000 -j DROP
-A INPUT -s 192.168.2.0/24 -i enp0s8 -p tcp -m tcp --dport 10000 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.0.2.0/24 -i enp0s3 -p tcp -m tcp --dport 4505:4506 -j ACCEPT
-A INPUT -s 192.168.2.0/24 -i enp0s8 -p tcp -m tcp --dport 4505:4506 -j ACCEPT
-A INPUT -s 10.0.2.0/24 -i enp0s3 -p tcp -m tcp --dport 9090 -j ACCEPT
-A INPUT -s 192.168.2.0/24 -i enp0s8 -p tcp -m tcp --dport 9090 -j ACCEPT
-A INPUT -s 10.0.2.0/24 -i enp0s3 -j DROP
-A INPUT -i enp0s3 -p tcp -m tcp --dport 23 -j DROP
-A INPUT -i enp0s3 -p tcp -m tcp --dport 110 -j DROP
-A INPUT -i enp0s3 -p tcp -m tcp --dport 113 -j DROP
-A INPUT -i enp0s3 -p udp -m udp --dport 111 -j DROP
-A INPUT -i enp0s3 -p tcp -m tcp --dport 111 -j DROP
-A INPUT -i enp0s3 -p tcp -m tcp --dport 137:139 -j DROP
-A INPUT -i enp0s3 -p udp -m udp --dport 137:139 -j DROP
-A INPUT -i enp0s3 -p tcp -m tcp --dport 3128 -j DROP
-A INPUT -i enp0s3 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -i enp0s3 -p tcp -m tcp --dport 8080 -j DROP
-A OUTPUT -s 10.0.2.0/24 -o enp0s3 -p tcp -m tcp --dport 4505:4506 -j ACCEPT
-A OUTPUT -s 192.168.2.0/24 -o enp0s8 -p tcp -m tcp --dport 4505:4506 -j ACCEPT
COMMIT
# Completed on Sat Sep 10 20:31:44 2016
